client: notification overflow in mobile devices fixed

--- a/client/src/hooks/useNotification/Notification.css
+++ b/client/src/hooks/useNotification/Notification.css
@@ -10,6 +10,7 @@
 	margin-left: auto;
 	margin-right: auto;
 	min-width: 10rem;
+	max-width: 100vw;
 	width: 25rem;
 	padding: 0.5rem 1rem;
 	z-index: 999;
